# http-header-inspector

./: README.md  pyproject.toml
http_header_inspector/: cli.py  core.py
tests/: test_core.py
